--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,51 @@
 html, body {
   margin: 0;
-  padding: 20px;
+  padding: 5px;
   width: 100%;
+  font-family: 'Press Start 2P', sans-serif;
+  font-weight: 400;
+  background-color: #1E1D1D;
 }
 
 * {
   box-sizing: border-box;
 }
 
+h1 {
+  font-size: 22px;
+}
+
+.heading {
+  display: block;
+  text-align: center;
+  color: #fff;
+}
+
+.heading h1 {
+  font-size: 36px;
+}
+
 ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
   list-style-type: none;
   position: absolute;
-  width: 450px;
-  margin: 10px auto 0;
+  width: 95%;
+  margin: 5px auto 0;
   padding: 10px;
+
 }
 
 li {
   display: flex;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 8px;
+  text-align: center;
 }
 
+/* Styling for list of Pokemon buttons */
 .pokemon-name {
   background-color: #8BE9CA;
   color: #000;
@@ -34,4 +59,98 @@ li {
 button:hover, button:focus {
   cursor: pointer;
   opacity: 0.8;
+}
+
+.wrapper {
+  width: 100%;
+}
+
+/* Styling for the details of each Pokemon */
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: rgba(0, 0, 0, 0.5); */
+
+  /* To show it above other content */
+  z-index: 999;
+
+  /* To allow scrolling if the screen is not high enough */
+  overflow: auto;
+
+  /* This is to centre the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 15px;
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  border-radius: 15px;
+  border-style: solid;
+  background-color: #F6F5F5;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+  margin-bottom: 0px;
+  font-size: 8px;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+@media all and (max-width: 1310px) {
+
+  ul {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media all and (max-width: 1080px) {
+
+  ul {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media all and (max-width: 800px) {
+
+  ul {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+}
+
+@media all and (max-width: 540px) {
+
+  ul {
+    grid-template-columns: 1fr;
+  }
 }
