--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ button:hover, button:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background: rgba(0, 0, 0, 0.5); */
+  background: rgba(0, 0, 0, 0.5);
 
   /* To show it above other content */
   z-index: 999;
