--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,8 @@ button:hover, button:focus {
   border-radius: 15px;
   border-style: solid;
   background-color: #F6F5F5;
+  animation: fadeIn .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+  animation: bondJamesBond 1.5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
 .modal-close {
@@ -113,14 +115,21 @@ button:hover, button:focus {
   text-decoration: underline;
   margin-bottom: 0px;
   font-size: 8px;
+  opacity:0;
+  position:relative;
+  animation: modalContentFadeIn .5s 1.4s linear forwards;
 }
 
-.modal h1 {
-  margin-top: 0;
+.modal h1,p {
+  opacity:0;
+  position:relative;
+  animation: modalContentFadeIn .5s 1.4s linear forwards;
 }
 
-.modal p {
-  margin-bottom: 0;
+.modal-img {
+  opacity:0;
+  position:relative;
+  animation: modalContentFadeIn .5s 1.4s linear forwards;
 }
 
 @media all and (max-width: 1310px) {
@@ -152,5 +161,51 @@ button:hover, button:focus {
 
   ul {
     grid-template-columns: 1fr;
+  }
+}
+
+
+/* Create animation to have modal look
+like a ball and slide in from right side */
+@keyframes fadeIn {
+  0% {
+    background:rgba(0,0,0,.0);
+    }
+  100% {
+    background:rgba(0,0,0,.7);
+  }
+}
+
+@keyframes modalContentFadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@keyframes bondJamesBond {
+  0% {
+    transform:translateX(1000px);
+    height: 120px;
+    width: 120px;
+    border-radius: 60px;
+  }
+  80% {
+    transform:translateX(0px);
+    height: 120px;
+    width: 120px;
+    border-radius: 60px;
+  }
+  90% {
+    height: 220px;
+    width: 380px;
+    border-radius: 40px;
+  }
+  100% {
+    height: 260px;
+    width: 400px;
+    border-radius: 20px;
   }
 }
